<resources>
    <string name="app_name">Child Lock</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="set_password">Set Password</string>
    <string name="remember_me">Remember me</string>
    <string name="login">Login</string>
    <string name="email_address">Email Address</string>
</resources>