<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/forground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-140dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/man_child" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:text="Hi,\nPlease Login"
        android:textColor="@color/blackShade"
        android:textSize="31sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/Go_signUp"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:background="#00FFFFFF"
        android:text="@string/sign_up"
        android:textColor="@color/purple"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginTop="110dp"
        android:orientation="vertical"
        android:padding="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forground"
        app:layout_constraintVertical_bias="0.674">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="8sp"
            android:layout_marginTop="5sp"
            android:autofillHints="emailAddress"
            android:background="@drawable/input_background"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="11sp"
            android:textColor="@color/blackShade" />

        <EditText
            android:id="@+id/Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8sp"
            android:autofillHints="name"
            android:background="@drawable/input_background"
            android:ems="10"
            android:hint="Password"
            android:inputType="textVisiblePassword"
            android:padding="12sp"
            android:textColor="@color/blackShade"
            tools:ignore="HardcodedText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/rememberMe"
                android:layout_width="138dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:text="@string/remember_me"
                android:textColor="@color/purple" />

            <Button
                android:id="@+id/forgotPassword"
                android:layout_width="182dp"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                android:text="Forgot Password?"
                android:textColor="@color/purple"
                tools:ignore="HardcodedText"
                tools:layout_margin="0sp" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login"
            style="@android:style/Widget.Button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/button_background"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <!--        ########## FOR LOGIN WITH SOCIAL MEDIA BUTTONS ########## -->
        <!--        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <View
                android:id="@+id/view"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:background="#707070" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:text="Or Login With" />

            <View
                android:id="@+id/view2"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:background="#707070" />
        </LinearLayout>-->


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>